# bindings-libusb

./: .hgtags  LICENSE  README.markdown  bindings-libusb.cabal  default.nix  shell.nix
src/: LibusbConstants.hs  LibusbFunctions.hs  LibusbTypes.hs  constants.c  core.c  functions.c  inlines.c  types.c
src/Bindings/: Libusb.hs  Libusb.hsc
src/Bindings/Libusb/: Asynchronous.hsc  DataStructures.hsc  Descriptors.hsc  DeviceHotplugEventNotification.hsc  HandlingAndEnumeration.hsc  InitializationDeinitialization.hsc  Miscellaneous.hsc  PollingAndTiming.hsc  Synchronous.hsc
